Add Gemini support, improve docs, and configure GH releases

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -428,7 +428,7 @@ jobs:
 
     - name: Create Release
       if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: v2.0.0-${{ github.run_number }}
         name: Termux AI v2.0.0 Build ${{ github.run_number }}
@@ -437,6 +437,7 @@ jobs:
           
           ## Features in this build:
           - ✅ Native Claude Code integration
+          - ✅ Native Gemini Support (Google)
           - ✅ Gboard autocomplete in terminal
           - ✅ Multi-tab terminal interface  
           - ✅ Mobile gesture controls
