fix: Correct FilePickerActivity theme in AndroidManifest.xml
Resolved the GitHub Actions build failure caused by an invalid theme reference in .

- :
  - Changed the  for  from  to .

Directly applying a dialog theme to an activity is incorrect. The activity should use a standard activity theme, and dialogs launched from it will inherit appropriate theming through the activity's context.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
             android:name="com.termux.ui.FilePickerActivity"
             android:exported="false"
             android:label="@string/file_picker_title"
-            android:theme="@style/Theme.TermuxAI.Dialog" />
+            android:theme="@style/Theme.TermuxAI" />
 
         <!-- Terminal Service for background operations -->
         <service
