--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
 android {
     namespace 'com.termux.ai'
     compileSdk 34
+    ndkVersion "27.3.13750724"
 
     defaultConfig {
         applicationId "com.termux.ai"
