--- a/terminal-emulator/build.gradle
+++ b/terminal-emulator/build.gradle
@@ -5,6 +5,7 @@ plugins {
 android {
     namespace 'com.termux.terminal.emulator'
     compileSdk 34
+    ndkVersion "27.3.13750724"
 
     defaultConfig {
         minSdk 24
