Termux+ v2.0.0: Modular Plugin Architecture & Rebranding

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Create local.properties
       run: echo "sdk.dir=$ANDROID_HOME" > local.properties
 
+    - name: Run AI Code Review Agent
+      run: python3 tools/review_agent.py
+
     - name: Build Debug APK
       run: gradle assembleDebug --stacktrace --no-daemon
 
