Implement Plus Features toggle UI and settings integration
- Add PlusTogglesActivity and PlusFeatureManager
- Add layout for toggle list (activity_plus_toggles.xml) and item (item_plus_toggle.xml)
- Add 'Plus Features' button to TermuxPlusSettingsActivity
- Register new activity in AndroidManifest.xml
- Include CLAUDE.md and related tool configs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,13 @@
             android:parentActivityName="com.termux.app.TabbedTerminalActivity" />
 
         <activity
+            android:name="com.termux.app.PlusTogglesActivity"
+            android:exported="false"
+            android:label="Plus Features"
+            android:parentActivityName="com.termux.app.TermuxPlusSettingsActivity"
+            android:theme="@style/Theme.TermuxAI" />
+
+        <activity
             android:name="com.termux.app.PluginSettingsActivity"
             android:exported="false"
             android:label="Plugins"
