--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.TermuxAI"
+        android:theme="@style/Theme.TermuxPlus"
         android:requestLegacyExternalStorage="true"
         android:preserveLegacyExternalStorage="true"
         tools:targetApi="31">
@@ -41,7 +41,7 @@
             android:exported="true"
             android:launchMode="standard"
             android:documentLaunchMode="always"
-            android:theme="@style/Theme.TermuxAI.NoActionBar"
+            android:theme="@style/Theme.TermuxPlus.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateVisible"
             android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
@@ -88,14 +88,14 @@
             android:exported="false"
             android:label="Plus Features"
             android:parentActivityName="com.termux.app.TermuxPlusSettingsActivity"
-            android:theme="@style/Theme.TermuxAI" />
+            android:theme="@style/Theme.TermuxPlus" />
 
         <activity
             android:name="com.termux.app.PluginSettingsActivity"
             android:exported="false"
             android:label="Plugins"
             android:parentActivityName="com.termux.app.TermuxPlusSettingsActivity"
-            android:theme="@style/Theme.TermuxAI" />
+            android:theme="@style/Theme.TermuxPlus" />
 
         <!-- Claude Code Setup Activity -->
         <activity
@@ -109,7 +109,7 @@
             android:name="com.termux.ui.FilePickerActivity"
             android:exported="false"
             android:label="@string/file_picker_title"
-            android:theme="@style/Theme.TermuxAI" />
+            android:theme="@style/Theme.TermuxPlus" />
 
         <!-- Services removed - were empty implementations with no functionality -->
 
@@ -126,7 +126,7 @@
 
         <!-- Receiver for system events -->
         <receiver
-            android:name="com.termux.receivers.TermuxAIReceiver"
+            android:name="com.termux.receivers.TermuxPlusReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
